Fix Alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11245,10 +11245,15 @@ body.template-color-1 {
     }
 }
 
+.popup-mobile-menu .inner .menu-top h6.title {
+    color: #000000;
+    margin: 0;
+    margin-top: 20px;
+}
 .popup-mobile-menu .inner .menu-top p.discription {
     font-size: 16px;
     line-height: 29px;
-    margin-top: 20px;
+    margin-top: 0px;
     color: var(--color-lighten);
     padding-right: 0;
 }
